@@ -736,7 +736,10 @@ Example : compress\n\r\
 Example : compress off\n\r\
 Short(s): \n\r\
 Toggles whether compressed room and equipment descriptions are shown. \
-See also the BRIEF command.
+See also the BRIEF command. When combined with BRIEF, will result in \
+an even shorter view that excludes room descriptions and full item and \
+mob displays in favor of name lists.
+
 	
 AUTO=CONFIG
 CONFIG=\
